[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="AnalyzeRequest" type="HTTPRequest" parent="."]

[node name="RetrieveRequest" type="HTTPRequest" parent="."]

[node name="EmotionRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="AnalyzeRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="RetrieveRequest" to="." method="_on_RetrieveRequest_request_completed"]
[connection signal="request_completed" from="EmotionRequest" to="." method="_on_EmotionRequest_request_completed"]
